refactor: enhance main, aplly css variables an use better image for performance

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="header-content">
       <a href="/">
-        <img class="logo" src="images/pensemosweb-black.png" width="300"/>
+        <img class="logo" src="images/pensemosweb-black.svg" />
       </a>
     </div>
     <div class="colored-border"></div>
@@ -46,7 +46,7 @@
         </div>
       </div>
     </section>
-    
+
     <pw-dialog></pw-dialog>
   </main>
 </body>
