refactor: use img tag for illustration and use more css variables

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <span class="green">ask</span><span class="pink">(</span><span>'¿Quieres aprender Ingles con maestros nativos?'</span><span class="pink">);</span>
     </p>
     <p class="code animate rightIn">
-      <span class="green">ask</span><span class="pink">(</span><span>'¿Te gustaria ayudar a mejorar la salud de las personas de tu comunidad?'</span><span class="pink">);</span>
+      <span class="green">ask</span><span class="pink">(</span><span>'¿Te gustaría ayudar a mejorar la salud de las personas de tu comunidad?'</span><span class="pink">);</span>
     </p>
     <div class=" animate leftIn" style="text-align: center;margin-bottom: 2rem;">
       <pw-button id="free">
@@ -42,11 +42,19 @@
     <section class="info">
       <div class="illustrations-container">
         <div class="illustration">
-          <div class="woman-thinking"></div>
-        </div>
+          <img
+            src="./images/woman-thinking_400.jpg"
+            width="300"
+            height="300"
+            class="woman-thinking"
+            loading="lazy"
+          >
       </div>
     </section>
 
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, nemo porro qui placeat aspernatur quidem quisquam sed numquam? Autem quia a pariatur non ipsam aliquam inventore incidunt at animi cupiditate?
+    </p>
     <pw-dialog></pw-dialog>
   </main>
 </body>
