--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#00D494">
+  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)">
   <title>Pensemos web: clases GRATIS</title>
   <link rel="stylesheet" href="./css/main.css">
   <script src="./js/main.js" type="module"></script>
