refactor: set size of logo in img tag

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="header-content">
       <a href="/">
-        <img class="logo" src="images/pensemosweb.svg" />
+        <img class="logo" src="images/pensemosweb.svg" width="300"/>
       </a>
     </div>
     <div class="colored-border"></div>
