refactor: code-editor styles and animations

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <section style="padding: var(--pw-spacing);">
-    <h1 class="code-title">/* Aprende a crear apps */</h1>
+    <h1 class="code-title">/* Aprende a crear aplicaciones */</h1>
     <section class="code-editor animate smallToBig">
       <div class="title-bar">
         <div class="title-bar__btn title-bar__btn--red"></div>
@@ -39,12 +39,12 @@
           <pre class="line-numbers__item">7</pre>
         </div>
         <div class="code-content">
-          <pre class="code"><span class="yellow">function </span><span class="green">ask</span><span class="pink">(</span><span class="blue">question</span><span class="pink">) { ... }</span></pre>
-          <pre class="code code-blank-line"> </pre>
-          <pre class="code"><span class="green">ask</span><span class="blue"></span><span class="pink">(</span><span>'¿Programación web para crear aplicaciones?'</span><span class="pink">);</span></pre>
-          <pre class="code"><span class="green">ask</span><span class="pink">(</span><span>'¿Ingles con maestros nativos?'</span><span class="pink">);</span></pre>
-          <pre class="code"><span class="green">ask</span><span class="pink">(</span><span>'¿Ayudar a la comunidad?'</span><span class="pink">);</span></pre>
-          <pre class="code typing"><span class="green">ask</span><span class="pink">(</span><span>'¿Quieres aprender?'</span><span class="pink">);   </span></pre>
+          <pre class="pre-code"><code class="code yellow">function </code><code class="code green">ask</code><code class="code pink">(</code><code class="code blue">question</code><code class="code pink">) { ... }</code></pre>
+          <pre class="pre-code code-blank-line"> </pre>
+          <pre class="pre-code"><code class="code green">ask</code><code class="code blue"></code><code class="code pink">(</code><code>'¿Programación web para crear aplicaciones?'</code><code class="code pink">);</code></pre>
+          <pre class="pre-code"><code class="code green">ask</code><code class="code pink">(</code><code>'¿Ingles con maestros nativos?'</code><code class="code pink">);</code></pre>
+          <pre class="pre-code"><code class="code green">ask</code><code class="code pink">(</code><code>'¿Ayudar a la comunidad?'</code><code class="code pink">);</code></pre>
+          <pre class="pre-code typing"><code class="code green">ask</code><code class="code pink">(</code><code>'¿Quieres aprender?'</code><code class="code pink">);   </code></pre>
         </div>
       </div>
     </section>
