refactor: separate and enhance css animations

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <section style="padding: var(--pw-spacing);">
-    <h1 class="code-title">/* Aprende a crear aplicaciones */</h1>
+    <h1>/* Aprende y crea aplicaciones */</h1>
     <section class="code-editor animate smallToBig">
       <div class="title-bar">
         <div class="title-bar__btn title-bar__btn--red"></div>
