feat: set height and minimial height to elementos, so avoiding FOUC

--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
       </div>
     </section>
   </section>
-  <div class="animate leftIn" style="text-align: center;margin-block: 2rem;">
+  <div style="text-align: center; margin-block: 2rem;">
     <pw-button id="free">
-      ¿Por qué GRATIS &#10067
+      ¿Por qué GRATIS? &#10067
     </pw-button>
   </div>
   <main>
@@ -71,7 +71,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, nemo porro qui placeat aspernatur quidem quisquam sed numquam? Autem quia a pariatur non ipsam aliquam inventore incidunt at animi cupiditate?
     </p>
-    <pw-dialog></pw-dialog>
+    <pw-dialog open></pw-dialog>
   </main>
 </body>
 </html>
