feat: modificar el nombre de image

--- a/src/pensemos-web-combinadores/index.html
+++ b/src/pensemos-web-combinadores/index.html
@@ -55,7 +55,7 @@
       </article>
 
       <section>
-        <img src="img/Captura de pantalla (1004).png" width="350" />
+        <img src="img/code01.png" width="350" />
         <p>
           Estos selectores seleccionan elementos que son descendientes de otros
           selectores. No es necesario que sean hijos directos.
